Fix alignment in pager

--- a/web/css/review-form.css
+++ b/web/css/review-form.css
@@ -83,7 +83,6 @@
 .pager {
   padding: 0.5rem 0.5rem;
   margin: 0 1rem;
-  width: 2rem;
   display: inline-block;
   text-align: center;
   cursor: pointer;
